--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
     <groupId>com.svs</groupId>
     <artifactId>javafx-sample</artifactId>
     <version>1.0.0</version>
+    <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
@@ -19,6 +20,24 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>11</version>
+	</dependency>
+	<dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+	    <version>11</version>
+	    <classifier>win</classifier>
+        </dependency>
+	<dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+	    <version>11</version>
+	    <classifier>linux</classifier>
+        </dependency>
+	<dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+	    <version>11</version>
+	    <classifier>mac</classifier>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.testfx/testfx-core -->
         <dependency>
@@ -64,8 +83,43 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
-                    <mainClass>com.svs.App</mainClass>
+                    <mainClass>com.svs.Main</mainClass>
                 </configuration>
+            </plugin>
+            <plugin>
+		<artifactId>maven-jar-plugin</artifactId>
+		<executions>
+		    <execution>
+			<id>default-jar</id>
+			<phase>none</phase>
+		    </execution>
+		</executions>
+	    </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <finalName>javafx-sample</finalName>
+		    <appendAssemblyId>false</appendAssemblyId>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.svs.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
